force-app/main/default/objects/Contract/fields/Bank_Guarantee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Amount__c</fullName>
    <label>Bank Guarantee Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>