force-app/main/default/objects/Contract/fields/Bank_Guarantee_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_Expiry_Date__c</fullName>
    <label>Bank Guarantee Expiry Date</label>
    <type>Date</type>
</CustomField>