force-app/main/default/objects/Contract/fields/Bank_Guarantee_or_Retention__c.field-meta.xml
<CustomField>
    <fullName>Bank_Guarantee_or_Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Guarantee or Retention</label>
    <type>Checkbox</type>
</CustomField>