force-app/main/default/objects/Contract/fields/BAS_Dept__c.field-meta.xml
<CustomField>
    <fullName>BAS_Dept__c</fullName>
    <label>BAS Dept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>