force-app/main/default/objects/Contract/fields/Client_Contact_for_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_for_Invoicing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact for Invoicing</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only contacts from the same account are allowed</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Client Contact for Invoicing)</relationshipLabel>
    <relationshipName>Client_Contact_for_Invoicing</relationshipName>
    <type>Lookup</type>
</CustomField>