force-app/main/default/objects/Contract/fields/Client_Kickoff_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Kickoff_Meeting_Date__c</fullName>
    <label>Client Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>