force-app/main/default/objects/Contract/fields/Client_Satisfaction_Survey__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Satisfaction Survey</label>
    <type>Checkbox</type>
</CustomField>