force-app/main/default/objects/Contract/fields/Contract_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Administrator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contract Administrator)</relationshipLabel>
    <relationshipName>Contract_Administrator</relationshipName>
    <type>Lookup</type>
</CustomField>