force-app/main/default/objects/Contract/fields/Contract_Administrator_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator_Formula__c</fullName>
    <formula>Contract_Administrator__r.FirstName &amp;
IF(ISBLANK(Contract_Administrator__r.MiddleName), &apos; &apos;, &apos; &apos;&amp;Contract_Administrator__r.MiddleName&amp;&apos; &apos;) &amp;
Contract_Administrator__r.LastName</formula>
    <label>Contract Administrator</label>
    <type>Text</type>
</CustomField>