force-app/main/default/objects/Contract/fields/Contract_Administrator_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Administrator_Sign_Date__c</fullName>
    <label>Contract Administrator Sign Date</label>
    <type>Date</type>
</CustomField>