force-app/main/default/objects/Contract/fields/Contract_Close_Out_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Out_Checklist__c</fullName>
    <label>Contract Close-Out Checklist</label>
    <type>TextArea</type>
</CustomField>