force-app/main/default/objects/Contract/fields/Contract_Docs_File_Location__c.field-meta.xml
<CustomField>
    <fullName>Contract_Docs_File_Location__c</fullName>
    <label>Contract Docs File Location</label>
    <type>Url</type>
</CustomField>