force-app/main/default/objects/Contract/fields/Contract_Extension_Option__c.field-meta.xml
<CustomField>
    <fullName>Contract_Extension_Option__c</fullName>
    <label>Contract Extension Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>