force-app/main/default/objects/Contract/fields/Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Id__c</fullName>
    <label>Contract Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>