force-app/main/default/objects/Contract/fields/Contract_KPI_Details__c.field-meta.xml
<CustomField>
    <fullName>Contract_KPI_Details__c</fullName>
    <inlineHelpText>Delete before use Please include details of contract KPI’s required to be delivered and/or reported against, include both internal and external requirements</inlineHelpText>
    <label>Contract KPI Details</label>
    <type>TextArea</type>
</CustomField>