force-app/main/default/objects/Contract/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contract Manager)</relationshipLabel>
    <relationshipName>Contract_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>