force-app/main/default/objects/Contract/fields/Contract_Manager_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Formula__c</fullName>
    <formula>Contract_Manager__r.FirstName &amp;
IF(ISBLANK(Contract_Manager__r.MiddleName), &apos; &apos;, &apos; &apos;&amp;Contract_Manager__r.MiddleName&amp;&apos; &apos;) &amp;
Contract_Manager__r.LastName</formula>
    <label>Contract Manager</label>
    <type>Text</type>
</CustomField>