force-app/main/default/objects/Contract/fields/Contract_Manager_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_Sign_Date__c</fullName>
    <label>Contract Manager Sign Date</label>
    <type>Date</type>
</CustomField>