force-app/main/default/objects/Contract/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contract_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>