force-app/main/default/objects/Contract/fields/Contract_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Formula__c</fullName>
    <formula>Contract_Owner__r.FirstName &amp;
IF(ISBLANK(Contract_Owner__r.MiddleName), &apos; &apos;, &apos; &apos;&amp;Contract_Owner__r.MiddleName&amp;&apos; &apos;) &amp;
Contract_Owner__r.LastName</formula>
    <label>Contract Owner</label>
    <type>Text</type>
</CustomField>