force-app/main/default/objects/Contract/fields/Contract_Owner_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Sign_Date__c</fullName>
    <label>Contract Owner Sign Date</label>
    <type>Date</type>
</CustomField>