force-app/main/default/objects/Contract/fields/Environmental_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Management_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Environmental Management Plan</label>
    <type>Checkbox</type>
</CustomField>