force-app/main/default/objects/Contract/fields/Formatize_Form_Setup__c.field-meta.xml
<CustomField>
    <fullName>Formatize_Form_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If yes, please direct to Contract Administrator for set up</inlineHelpText>
    <label>Formatize Form Setup</label>
    <type>Checkbox</type>
</CustomField>