force-app/main/default/objects/Contract/fields/General_Scope_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Scope_Description__c</fullName>
    <inlineHelpText>Delete before use Please include a breakdown of the main elements of works eg. Civil, M&amp;E, Land Management.</inlineHelpText>
    <label>General Scope Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>