force-app/main/default/objects/Contract/fields/Invoice_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Arrangements__c</fullName>
    <label>Invoice Arrangements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoice_Arrangements</valueSetName>
    </valueSet>
</CustomField>