force-app/main/default/objects/Contract/fields/Invoice_Arrangements_Other__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Arrangements_Other__c</fullName>
    <label>Invoice Arrangements (Other)</label>
    <type>TextArea</type>
</CustomField>