force-app/main/default/objects/Contract/fields/Lessons_Learned_Log__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned_Log__c</fullName>
    <label>Lessons Learned Log</label>
    <type>TextArea</type>
</CustomField>