force-app/main/default/objects/Contract/fields/Methodology_Details__c.field-meta.xml
<CustomField>
    <fullName>Methodology_Details__c</fullName>
    <inlineHelpText>Delete before use Please include a detailed methodology that was priced, including Vehicles, equipment, personnel, productivity/work requirements, set timeframes, subcontractor’s</inlineHelpText>
    <label>Methodology Details</label>
    <type>TextArea</type>
</CustomField>