force-app/main/default/objects/Contract/fields/Mobilisation_Actions__c.field-meta.xml
<CustomField>
    <fullName>Mobilisation_Actions__c</fullName>
    <inlineHelpText>Delete before use Includes key milestones that need to be met prior to go-live of services eg.  training inductions, systems, equipment.</inlineHelpText>
    <label>Mobilisation Actions</label>
    <type>TextArea</type>
</CustomField>