force-app/main/default/objects/Contract/fields/Monthly_Reports_Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Reports_Internal_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Reports Internal/External</label>
    <type>Checkbox</type>
</CustomField>