force-app/main/default/objects/Contract/fields/Notes_Other_key_staff__c.field-meta.xml
<CustomField>
    <fullName>Notes_Other_key_staff__c</fullName>
    <label>Notes/Other key staff</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>