force-app/main/default/objects/Contract/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active contracts are allowed.</errorMessage>
        <filterItems>
            <field>Contract.Status</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Parent Contract</relationshipLabel>
    <relationshipName>ChildContract</relationshipName>
    <type>Lookup</type>
</CustomField>