force-app/main/default/objects/Contract/fields/Potential_Variations_Details__c.field-meta.xml
<CustomField>
    <fullName>Potential_Variations_Details__c</fullName>
    <inlineHelpText>Delete before use Includes items that have been clarified out or assumptions documented that may result in a variation. Identify the trigger point for a variation and how this is priced.</inlineHelpText>
    <label>Potential Variations Details</label>
    <type>TextArea</type>
</CustomField>