force-app/main/default/objects/Contract/fields/Quality_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Quality_Management_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quality Management Plan</label>
    <type>Checkbox</type>
</CustomField>