force-app/main/default/objects/Contract/fields/Revenue_to_date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_to_date__c</fullName>
    <label>Revenue to date $</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>