force-app/main/default/objects/Contract/fields/Safety_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Safety_Management_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Delete before use Do we have to provide any of these to the client?</inlineHelpText>
    <label>Safety Management Plan</label>
    <type>Checkbox</type>
</CustomField>