force-app/main/default/objects/Contract/fields/Signed_Contract_Saved__c.field-meta.xml
<CustomField>
    <fullName>Signed_Contract_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Contract Saved</label>
    <type>Checkbox</type>
</CustomField>