force-app/main/default/objects/Contract/fields/Traffic_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Management_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traffic Management Plan</label>
    <type>Checkbox</type>
</CustomField>